WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
28144
Memory leak in error handling code for SOUP interface
https://bugs.webkit.org/show_bug.cgi?id=28144
Summary
Memory leak in error handling code for SOUP interface
John Kjellberg
Reported
2009-08-10 06:06:08 PDT
When reviewing the code I believe I have found parts in the error handling code where "g_free" is missing. See attached patch for details.
Attachments
Added "g_free" after calls to "soup_uri_to_string" and "g_file_get_uri" where they where missing.
(4.58 KB, patch)
2009-08-10 06:16 PDT
,
John Kjellberg
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
John Kjellberg
Comment 1
2009-08-10 06:16:48 PDT
Created
attachment 34449
[details]
Added "g_free" after calls to "soup_uri_to_string" and "g_file_get_uri" where they where missing.
John Kjellberg
Comment 2
2009-08-10 06:19:11 PDT
I'm sorry if I have misunderstood the code. I'm new to WebKit, SOUP and glib. Please give me some short input if I have missed something regarding the resource handling. Thanks.
Darin Adler
Comment 3
2009-08-10 10:19:24 PDT
Comment on
attachment 34449
[details]
Added "g_free" after calls to "soup_uri_to_string" and "g_file_get_uri" where they where missing.
> + char *uri=soup_uri_to_string(soup_message_get_uri(msg), false);
Formatting is wrong here. It should be "char* uri = soup…" Otherwise, this patch looks great. I'm going to say r=me
Jan Alonzo
Comment 4
2009-08-10 11:26:52 PDT
(In reply to
comment #3
)
> (From update of
attachment 34449
[details]
) > > + char *uri=soup_uri_to_string(soup_message_get_uri(msg), false); > > Formatting is wrong here. It should be "char* uri = soup…" > > Otherwise, this patch looks great. I'm going to say r=me
Thanks. Landed as
http://trac.webkit.org/changeset/46989
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug