2009-08-10  John Kjellberg  <john.kjellberg@power.alstom.com>

Reviewed by Darin Adler.

        Memory leak in error handling code for SOUP interface
        https://bugs.webkit.org/show_bug.cgi?id=28144

        Freed memory leaked in error handling code for soup requests.

        * platform/network/soup/ResourceHandleSoup.cpp:
        (WebCore::finishedCallback):
        (WebCore::):

Canonical link: https://commits.webkit.org/38592@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46989 268f45cc-cd09-0410-ab3c-d52691b4dbfc